Documented the last change in CHANGELOG
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@8 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 HEAD:
+          Madeleine will check every hour if there are new commands in the log or 24 hours have 
+          passed since last snapshot, and take snapshot if either of these conditions is true
           Wiki extracts (to HTML and plain text) will leave only the last extract file in ./storage
           Local hyperlinks in published pages point to published pages [Michael DeHaan]
           Various usability enhancements
