Documented a new command-line option
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@24 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@ HEAD:
           restart
           Fixed parsing of URIs with a port number (http://someplace.org:8080)
           Instiki will not fork itself on a *nix, unless explicitly asked to
+          Instiki can bind to IPs other than 127.0.0.1 (command-line option)
           Automated tests for all controller actions
           Various usability enhancements
 
