--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,7 @@ HEAD:
           Fixed parsing of URIs with a port number (http://someplace.org:8080)
           Instiki will not fork itself on a *nix, unless explicitly asked to
           Instiki can bind to IPs other than 127.0.0.1 (command-line option)
+          Revisions that do not change anything on the page are rejected
           Automated tests for all controller actions
           Various usability enhancements
 
@@ -18,7 +19,7 @@ HEAD:
           take place.
           Changed to use inline style on published pages
           Fixed "forward in time" on the last revision before current page
-          Instiki won't log bogus error messages when creating a new Wiki.
+          Instiki won't log bogus error messages when creating a new Wiki
           Fixed deprecation warning for Object.id (introduced in Ruby 1.8.2)
           Madeleine upgraded to 0.7.1
           Madeleine snapshots are compressed
