--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 HEAD:
+          Wiki search handles multibyte (UTF-8) characters correctly
           Ported to ActionPack
           Madeleine will check every hour if there are new commands in the log or 24 hours have 
           passed since last snapshot, and take snapshot if either of these conditions is true
