Documented ability to server static content in the CHANGELOG (it's a side-effect of porting to Rails)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@70 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 HEAD:
+          Instiki can serve static content (such as HTML or plain-text files) from ./public 
+          directory
           Wiki search handles multibyte (UTF-8) characters correctly
           Ported to ActionPack
           Madeleine will check every hour if there are new commands in the log or 24 hours have 
