--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 HEAD:
+          Wiki link syntax doesn't conflict with Textile hyperlink syntax. Therefore
+          "textile link":LinkToSomePlace will not look insane.
           Instiki can serve static content (such as HTML or plain-text files) from ./public 
           directory
           Wiki search handles multibyte (UTF-8) characters correctly
