File upload implemented (mentioning it in CHANGELOG). Things to do: * testing, * security tightening, * admin controls (upload size cap, a way to disable the feature) * handling of files/pictures in exported and published wikis
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@100 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 HEAD:
+          Files/pictures can be uploaded to a wiki and served from / displayed in wiki pages
           Wiki link syntax doesn't conflict with Textile hyperlink syntax. Therefore
           "textile link":LinkToSomePlace will not look insane.
           Instiki can serve static content (such as HTML or plain-text files) from ./public 
