Documented last change in CHANGELOG; it was: search looks at page titles, as well as contents [edk]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@133 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,7 +19,8 @@ HEAD:
           Revisions that do not change anything on the page are rejected
           Automated tests for all controller actions
           category: lines are presented as links to "All Pages" for relevant categories
-          Various usability enhancements
+          Search looks at page titles, as well as content
+          Various other usability enhancements and bug fixes
 
  * 0.9.2:
           Rollback takes the user to an edit form. The form has to be submitted for the change to 
