Upgraded RedCloth to 3.0.3
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@157 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 HEAD:
+          RedCloth 3.0.3 (read: mixing Textile and Markdown in the same page)
           Files/pictures can be uploaded to a wiki and served from / displayed in wiki pages
           Wiki link syntax doesn't conflict with Textile hyperlink syntax. Therefore
           "textile link":LinkToSomePlace will not look insane.
