Fixed rendering, added a Mixed option (Textile + Markdown), default is Textile-only
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@222 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,8 @@
  * 0.10.0:
           Ported to ActionPack
           RedCloth 3.0.3
-          BlueCloth is phased out
-          Default markup remains Textile-only, but Markdown wikis now understand Textile 
-          syntax on the same page
+          BlueCloth is phased out, Markdown is rendered by RedCloth
+          Mix markup option understands both Textile and Markdown on the same page
           Instiki can serve static content (such as HTML or plain-text files) from ./public 
           directory
           Much friendlier admin interface
