--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,7 @@
- * TODO:
-          BlueCloth is back (RedCloth didn't do Markdown well enough to replace it).
-
  * SVN trunk:
           Handling of line breaks in Textile is as in 0.9 (inserts <br/> tag).
           Upgraded rubyzip to version 0.5.8
+          BlueCloth is back (RedCloth didn't do pure Markdown well enough to replace it yet)
  * 0.10.0:
           Ported to ActionPack
           RedCloth 3.0.3
