Fixed an incompatibility with old storages; ticket:133
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@251 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,9 @@
  * 0.10.1:
           Upgraded Rails to 0.12.0
           Upgraded rubyzip to version 0.5.8
-          BlueCloth is back (RedCloth didn't do pure Markdown well enough to replace it yet)
+          BlueCloth is back (RedCloth didn't do pure Markdown well enough)
           Handling of line breaks in Textile is as in 0.9 (inserts <br/> tag)
           Fixed HTML export (to enclose the output in <html> tags, include the stylesheet etc)
-          
           Some other bug fixes
 
  * 0.10.0:
