Preparing to release 0.10.1
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@252 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
           BlueCloth is back (RedCloth didn't do pure Markdown well enough)
           Handling of line breaks in Textile is as in 0.9 (inserts <br/> tag)
           Fixed HTML export (to enclose the output in <html> tags, include the stylesheet etc)
+          Corrected some compatibility issues with storages from earlier Instiki versions
           Some other bug fixes
 
  * 0.10.0:
