Multiline <nowiki> tag
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@261 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
           Added layout=no option to the export_html action (it exports page contents processed 
           by the markup engine, but without the default layout - so that they can be wrapper in 
           some other layout)
+          <nowiki> tag can span several lines (before it was applied when both opening and closing 
+          tags were on the same line only)
 
  * 0.10.1:
           Upgraded Rails to 0.12.0
