Better handling of permissions for re-uploading a file that already exists (ticket:163)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@300 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@
           some other layout)
           <nowiki> tag can span several lines (before it was applied when both opening and closing 
           tags were on the same line only)
+          Resolved the "endless redirection loop" condition and otherwise improved handling of 
+          errors in the rendering engines
 
  * 0.10.1:
           Upgraded Rails to 0.12.0
