Documented the last change
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@302 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
           tags were on the same line only)
           Resolved the "endless redirection loop" condition and otherwise improved handling of 
           errors in the rendering engines
+          Fixed rendering of Markdown hyperlinks such as [Text](http://something.com/foo)
 
  * 0.10.1:
           Upgraded Rails to 0.12.0
