Upgraded Rails to version 0.13.1
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@305 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
  * trunk:
+          Upgraded to Rails 0.13.1
           Fixed HTML export
           Added layout=no option to the export_html action (it exports page contents processed 
           by the markup engine, but without the default layout - so that they can be wrapper in 
