--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
           Upgraded to Rails 0.13.1
           Fixed HTML export
           Added layout=no option to the export_html action (it exports page contents processed 
-          by the markup engine, but without the default layout - so that they can be wrapper in 
+          by the markup engine, but without the default layout - so that they can be wrapped in 
           some other layout)
           <nowiki> tag can span several lines (before it was applied when both opening and closing 
           tags were on the same line only)
