Upgraded RedCloth to 3.0.4
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@390 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+ * instiki-ar
+   SQL-based backend (ActiveRecord)
+   Upgrade to RedCloth 3.0.4
+   Replaced internal link generator with routing
+   Fixed --daemon option
+
  * 0.10.2:
           Upgraded to Rails 0.13.1
           Fixed HTML export
