Downgrading RedCloth back to 3.0.3 (3.0.4 is said to be buggy)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@397 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,5 @@
- * instiki-ar
+ * instiki-ar:
    SQL-based backend (ActiveRecord)
-   Upgrade to RedCloth 3.0.4
    Replaced internal link generator with routing
    Fixed --daemon option
 
