--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
    SQL-based backend (ActiveRecord)
    Replaced internal link generator with routing
    Fixed --daemon option
+   Upgraded to Rails 0.14.2
+   Re-enabled file uploads
 
  * 0.10.2:
           Upgraded to Rails 0.13.1
