--- a/README
+++ b/README
@@ -84,9 +84,14 @@ you forgot to run ruby script\reset_references after importing the data.
 ===Upgrading from Instiki-AR Beta 1
 In Beta 2 two new tables are added: sessions and wiki_files. Also, there are some indexes renamed or added.
 Otherwise, there are no schema changes, table structure is the same as in Beta 1.
-Therefore, create a new development database, edit config/database.yml as appropriate, execute 'rake db_schema_import',
-export data (but not structure!) from Beta 1 database, import it into the new one, check that Beta 2 development 
-environment works with imported data, copy the development database (both data AND structure this time) to production.
+Therefore:
+1. Create a new development database.
+2. Edit config/database.yml as appropriate.
+3. Execute 'rake db_schema_import'.
+4. Export data (but not structure!) from Beta 1 database.
+5. Import it into the new one.
+6. Check that Beta 2 development environment works with imported data, and finally
+7. Copy the development database (both data AND structure this time) to production.
 Future releases will use Rails Migrations, so the upgrade will be somewhat less of a hassle.
 
 ===Download the latest release from:
