--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,11 @@
  * TRUNK:
    SQL-based backend (ActiveRecord)
-   Fixed --daemon option
+   File uploads (finally)
+   Upgraded to Rails 0.14.3 (also know as 1.0 RC 4)
    Replaced internal link generator with routing
-   Upgraded to Rails 0.14.3
-   Re-enabled file uploads
-   Removed gem and native OS X distributions
+   Fixed --daemon option
+   Removed Rubygem and native OS X distributions
+   More accurate "See Changes" 
 
  * 0.10.2:
           Upgraded to Rails 0.13.1
