Refactoring and deleting unused code from lib/diffr.rb until I can understand what it says. Also fixes #256. The build is still broken.
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@440 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/README
+++ b/README
@@ -50,7 +50,8 @@ to install (until somebody sends a patch to properly package Instiki for all tho
 * Internationalization: Wiki words in any latin, greek, cyrillian, or armenian characters
 * Color diffs: Track changes through revisions
 * Definitely can run on SQLite and MySQL
-* May be able to run on Postgres, Oracle, DB2 and SqlServer (if you try this )
+* May be able to run on Postgres, Oracle, DB2 and SqlServer. If you try this, and it works 
+  (or, it doesn't, but you make it work) please write about it on Instiki.org.
 
 ===Command-line options:
 * Run "ruby instiki --help"
