Corrected installation instruction
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@461 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/README
+++ b/README
@@ -27,7 +27,7 @@ to install (until somebody sends a patch to properly package Instiki for all tho
 5. Install SQLite 3 driver for Ruby from http://sqlite-ruby.rubyforge.org/
 6. Install Rake from http://rake.rubyforge.org/
 7. Execute rm -f db/*.db
-8. Execute 'rake migrate'
+8. Execute 'rake environment RAILS_ENV=production migrate'
 9. Make an embarrassed sigh (as I do while writing this)
 10. Run 'instiki' again
 11. Pat yourself on the shoulder for being such a talented geek
