documented the last change
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@487 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
    Stylesheet tweaks
    Linux packaging
    Fixed bug that failed to expire cached diff view of a page
+   Fixed rendering of WikiLinks in included pages in published or export mode
 
  * 0.11.0:
    SQL-based backend (ActiveRecord)
