added Rails 1.2 compatibility information, after checking
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@490 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 * TRUNK:
+   Rails 1.2 tested
    Stylesheet tweaks
    Linux packaging
    Fixed bug that failed to expire cached diff view of a page
